# parewi

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac
data/: Makefile.am
data/config/: conf.lua
data/images/: Makefile.am
data/sounds/: Makefile.am
po/: Makefile.am  Makefile.in
src/: Makefile.am  filesys.c  filesys.h  game.c  game.h  main.c  parewi.c  parewi.h
